# comet-code

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/: config.py
src/cli/: commands.py  completer.py  render.py  state.py  ui.py
src/core/: __init__.py  graph.py  graph_state.py  nodes.py  orchestrator.py
src/llm/: __init__.py  models.py  openrouter_client.py  prompts.py
src/output/: __init__.py
src/patching/: __init__.py
src/retrieval/: __init__.py
src/sandbox/: __init__.py
src/schemas/: __init__.py  attempt.py  code_chunk.py  events.py  mode_policy.py  packet.py  plan.py  session.py  task.py  tool.py
src/tools/: __init__.py
src/verify/: __init__.py
tests/: test_cli_render.py  test_cli_ui.py  test_limit_handling.py  test_tool_approval.py  test_tools_schema.py
