[project]
name = "comet-code"
version = "0.1.0"
description = "Agentic CLI coding assistant"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.47",
    "pydantic>=2.7.0",
]

[project.scripts]
comet = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/cli",
    "src/core",
    "src/llm",
    "src/output",
    "src/patching",
    "src/retrieval",
    "src/sandbox",
    "src/schemas",
    "src/tools",
    "src/verify",
]
force-include = { "main.py" = "main.py" }