[project]
name = "comet-code"
version = "0.1.4"
description = "Agentic CLI coding assistant"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Pritivi Rajkumar" },
]
license = { text = "MIT" }
keywords = ["cli", "coding-assistant", "llm", "agent", "openrouter", "langgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.47",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "langgraph>=1.1.6",
    "langchain-core>=1.2.28",
    "langchain-openai>=1.1.12",
]

[project.urls]
Homepage = "https://github.com/pritivi03/comet-code"
Repository = "https://github.com/pritivi03/comet-code"
Issues = "https://github.com/pritivi03/comet-code/issues"

[project.scripts]
comet = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/cli",
    "src/core",
    "src/llm",
    "src/schemas",
    "src/tools",
]
force-include = { "main.py" = "main.py", "src/config.py" = "config.py" }
